--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,24 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+@import "tailwindcss";
+
+
+@theme {
+
+    --font-poppins: Poppins, sans-serif;
+    --font-sans: "Roboto Flex", sans-serif;
+
+    --color-primary-green: #3EB650;
+    --color-primary-blue: #3778C2;
+    --color-primary-orange: #FE6601;
+
+    --drop-shadow-3xl: 0 35px 35px rgba(0, 0, 0, 0.25);
+    --drop-shadow-4xl: 0 45px 65px rgba(0, 0, 0, 0.15);
+
+    --animate-spin: spin 1s linear infinite;
+
+    @keyframes spin {
+        to {
+            transform: rotate(360deg);
+        }
+    }
+}
